--- a/xbot-vue3/libs/xbotui-vue3-antd.css
+++ b/xbot-vue3/libs/xbotui-vue3-antd.css
@@ -1,160 +1,1 @@
-.myPopClass .ant-popover-arrow {
-  display: none !important;
-}
-.ant-drawer-title {
-  font-size: 16px;
-  font-weight: 600;
-  color: black;
-}
-.displayUser {
-  margin-top: 12px;
-  display: flex;
-  justify-content: flex-start;
-}
-.displayUser .userCard {
-  width: 32px;
-  height: 32px;
-  background: linear-gradient(135deg, #9daac2, #6d7b98);
-  border-radius: 2px;
-  font-size: 10px;
-  font-weight: 500;
-  text-align: center;
-  color: #ffffff;
-  line-height: 32px;
-  margin-right: 4px;
-}
-.displayUser .addUser {
-  width: 32px;
-  height: 32px;
-  background: #ecf0f8;
-  border-radius: 4px;
-  font-size: 14px;
-  text-align: left;
-  color: #3c3a38;
-  line-height: 32px;
-}
-.flex-row {
-  display: flex;
-  flex-direction: row;
-}
-.flex-column {
-  display: flex;
-  flex-direction: column;
-}
-.property-name {
-  width: 72px;
-  color: #6D7B98;
-}
-.property-text {
-  color: black;
-}
-.property-text,
-.property-name,
-.property-tag {
-  margin-bottom: 16px;
-  font-size: 14px;
-}
-.property-tag {
-  padding: 2px 8px;
-  background-color: #C9D2E1;
-  color: black;
-  margin-right: 12px;
-  border-radius: 5px;
-}
-.flex-1 {
-  display: flex;
-  flex: 1;
-  overflow: hidden;
-}
-.card {
-  width: 358px;
-  height: 200px;
-  background: #ffffff;
-  border-radius: 4px;
-  margin: 8px 16px 8px 0;
-  padding: 16px;
-  box-shadow: #999999;
-}
-.card .review-card {
-  display: flex;
-  background-color: #FFFFFF;
-  width: 100%;
-  height: 126px;
-  border-radius: 5px;
-}
-.card .review-card .sc-title {
-  font-size: 14px;
-  color: #47516A;
-  line-height: 20px;
-}
-.card .review-card .pointSet {
-  width: 80px;
-  text-align: right;
-  line-height: 13px;
-  color: #6D7B98;
-}
-.card .review-card .pointSet .fontSet {
-  transform: scale(1.5);
-  line-height: 13px;
-  cursor: pointer;
-  display: inline-block;
-}
-.card .review-card .progress-dot {
-  margin-right: 8px;
-  width: 8px;
-  height: 8px;
-  border-radius: 50%;
-  background-color: #0A87F5;
-  margin-top: 5px;
-}
-.card .review-card .progress-text {
-  font-size: 14px;
-  color: #2A334A;
-}
-.card .review-card .title {
-  margin-top: 8px;
-  font-size: 16px;
-  font-weight: 600;
-  color: #2A334A;
-  cursor: pointer;
-}
-.card .review-card .title:hover {
-  color: #F65D30;
-}
-.card .review-card .manager-text {
-  font-size: 14px;
-  margin-top: 4px;
-}
-.card .review-card .dead-line {
-  font-size: 12px;
-}
-.card .review-card .dead-line,
-.card .review-card .extra-button {
-  color: #6d7b98;
-  margin-bottom: -20px;
-}
-.card .review-card .extra-button {
-  font-size: 22px;
-  cursor: pointer;
-}
-.card .review-card .drawer-title {
-  font-size: 16px;
-  font-weight: 600;
-  color: black;
-}
-.card .review-card .drawer-body {
-  padding: 0px 24px;
-}
-.card .review-card .property-tag {
-  padding: 2px 8px;
-  background-color: #C9D2E1;
-  color: black;
-  margin-right: 12px;
-  border-radius: 5px;
-}
-.card .buttonList {
-  position: absolute;
-  right: 0;
-  top: 13px;
-}
-
+.myPopClass .ant-popover-arrow{display:none!important}.ant-drawer-title{font-size:16px;font-weight:600;color:#000}.displayUser{margin-top:12px;display:flex;justify-content:flex-start}.displayUser .userCard{width:32px;height:32px;background:linear-gradient(135deg,#9daac2,#6d7b98);border-radius:2px;font-size:10px;font-weight:500;text-align:center;color:#fff;line-height:32px;margin-right:4px}.displayUser .addUser{width:32px;height:32px;background:#ecf0f8;border-radius:4px;font-size:14px;text-align:left;color:#3c3a38;line-height:32px}.flex-row{display:flex;flex-direction:row}.flex-column{display:flex;flex-direction:column}.property-name{width:72px;color:#6d7b98}.property-text{color:#000}.property-name,.property-tag,.property-text{margin-bottom:16px;font-size:14px}.property-tag{padding:2px 8px;background-color:#c9d2e1;color:#000;margin-right:12px;border-radius:5px}.flex-1{display:flex;flex:1;overflow:hidden}.card{width:358px;height:200px;background:#fff;border-radius:4px;margin:8px 16px 8px 0;padding:16px;box-shadow:#999}.card .review-card{display:flex;background-color:#fff;width:100%;height:126px;border-radius:5px}.card .review-card .sc-title{font-size:14px;color:#47516a;line-height:20px}.card .review-card .pointSet{width:80px;text-align:right;line-height:13px;color:#6d7b98}.card .review-card .pointSet .fontSet{transform:scale(1.5);line-height:13px;cursor:pointer;display:inline-block}.card .review-card .progress-dot{margin-right:8px;width:8px;height:8px;border-radius:50%;background-color:#0a87f5;margin-top:5px}.card .review-card .progress-text{font-size:14px;color:#2a334a}.card .review-card .title{margin-top:8px;font-size:16px;font-weight:600;color:#2a334a;cursor:pointer}.card .review-card .title:hover{color:#f65d30}.card .review-card .manager-text{font-size:14px;margin-top:4px}.card .review-card .dead-line{font-size:12px}.card .review-card .dead-line,.card .review-card .extra-button{color:#6d7b98;margin-bottom:-20px}.card .review-card .extra-button{font-size:22px;cursor:pointer}.card .review-card .drawer-title{font-size:16px;font-weight:600;color:#000}.card .review-card .drawer-body{padding:0 24px}.card .review-card .property-tag{padding:2px 8px;background-color:#c9d2e1;color:#000;margin-right:12px;border-radius:5px}.card .buttonList{position:absolute;right:0;top:13px}
